--- a/resources/assets/sass/platform/_media.sass
+++ b/resources/assets/sass/platform/_media.sass
@@ -1,5 +1,5 @@
 @media (max-width: 5000px)
-	.tags-cloud-if
+	.tags-cloud-if, .hidden-name
 		display: none
 
 
@@ -7,14 +7,14 @@
 	.rotatable
 		font-size: 500px
 		margin-top: -350px
-	.tags-cloud-if
+	.tags-cloud-if, .hidden-name
 		display: none
 
 
 @media (max-width: 990px)
 	.third-post
 		display: none
-	.tags-cloud-if
+	.tags-cloud-if, .hidden-name
 		display: none
 
 
@@ -24,7 +24,7 @@
 		margin-top: -350px
 	.img-container
 		height: 250px !important
-	.tags-cloud-if
+	.tags-cloud-if, .hidden-name
 		display: none
 
 
@@ -38,7 +38,7 @@
 			margin-top: -300px
 	.center-content
 		margin-top: 5px
-	.tags-cloud-if
+	.tags-cloud-if, .hidden-name
 		display: none
 
 
@@ -69,14 +69,14 @@
 		margin-left: 100px
 	.section-single-project
 		margin-left: 100px
-	.tags-cloud-if
+	.tags-cloud-if, .hidden-name
 		display: none
 
 
 @media (max-width: 700px)
 	.rotatable
 		display: none
-	.tags-cloud-if
+	.tags-cloud-if, .hidden-name
 		display: none
 
 
@@ -89,7 +89,7 @@
 		margin-top: 0px
 	.block-social-header
 		margin-top: 15px
-	.tags-cloud-if
+	.tags-cloud-if, .hidden-name
 		display: none
 
 
@@ -118,6 +118,11 @@
 		display: none
 	.projects-column
 		margin-left: 15px
+	.hidden-name
+		visibility: visible
+		display: inline
+	.posts-margin-top
+		margin-bottom: -75px !important
 
 
 @media (max-width: 400px)
@@ -126,7 +131,7 @@
 	.img-container
 		height: 160px !important
 	.post-img
-		height: 200px !important
+		height: 180px !important
 	.contact-title, .main-title, .expirience-title, .skill-title 
 		font-size: 35px
 		letter-spacing: 0px
