--- a/resources/assets/sass/platform/_style.sass
+++ b/resources/assets/sass/platform/_style.sass
@@ -50,6 +50,8 @@ button
 	margin-left: -5px !important
 .h-margin-left
 	margin-left: 40px
+.posts-margin-top
+	margin-top: 15px
 .preloader-block
 	height: 500px
 	margin-top: 300px
